syntax = "proto3";

package world.engine.shard.v1;

option go_package = "github.com/argus-labs/world-engine/shard/v1";

// service ShardHandler deals with transactions coming from game shards.
service ShardHandler {
  // SubmitCardinalBatch handles receiving transactions from a game shard and persisting them to the chain.
  rpc SubmitShardTx(SubmitShardTxRequest) returns (SubmitShardTxResponse);
}

message SubmitShardTxRequest {
  uint64 epoch = 1;
  uint64 tx_id = 2;
  Transaction tx = 3;
}

message SubmitShardTxResponse {}

message Transaction {
  string PersonaTag = 1;
  string Namespace = 2;
  uint64 Nonce = 3;
  string Signature = 4;
  bytes Body = 5;
}